fix: address review - null-safe result average, consistent 404s, course-service CI paths